--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,11 @@ repos:
     rev: 21.10b0
     hooks:
       - id: black
+  - repo: https://github.com/jgstew/pre-commit-jgstew
+    rev: v1.0.0
+    hooks:
+      - id: minimum-changes
+        args: [--min-changes=1]
   # https://towardsdatascience.com/getting-started-with-python-pre-commit-hooks-28be2b2d09d5
   # the following is windows only due to using `python` instead of `python3`
   # - repo: local
