--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -26,7 +26,7 @@ jobs:
           python-version: "3.8"
       - name: Install flake8
         run: pip install flake8
-      # - name: Install requirements
-      #   run: pip install -r requirements.txt
+      - name: Install requirements
+        run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run flake8
         run: flake8 --show-source --statistics .
