--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,14 +45,15 @@ repos:
     rev: v1.0.0
     hooks:
       - id: minimum-changes
-        args: [--min-changes=0]
+        args: [--min-changes=-1]
   # https://towardsdatascience.com/getting-started-with-python-pre-commit-hooks-28be2b2d09d5
-  # the following is windows only due to using `python` instead of `python3`
-  # - repo: local
-  #   hooks:
-  #     - id: minimum-changes-local
-  #       name: minimum-changes-local
-  #       entry: python pre_commit_hooks/minimum_changes.py
-  #       language: system
-  #       pass_filenames: True
-  #       args: [--min-changes=0]
+  # the following might not work everywhere due to using `python` instead of `python3`
+  - repo: local
+    hooks:
+      - id: minimum-changes-local
+        name: minimum-changes-local
+        entry: python pre_commit_hooks/minimum_changes.py
+        language: system
+        pass_filenames: True
+        args: [--min-changes=0]
+        files: .test_file
