added validate-bes hook

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -6,3 +6,11 @@
   language: python
   pass_filenames: True
   types: [text]
+- id: validate-bes
+  name: Validate BigFix BES Files
+  description: This hook validates BigFix BES XML Files
+  entry: validate-bes
+  language: python
+  pass_filenames: True
+  types: [text]
+  files: \.(bes|ojo)$
