--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,10 @@ package_dir =
     = .
 packages = pre_commit_hooks
 python_requires = >=3.5
-
+install_requires =
+    validate_bes_xml
 
 [options.entry_points]
 console_scripts =
     minimum-changes = pre_commit_hooks.minimum_changes:main
+    validate-bes = pre_commit_hooks.validate_bes:main
