--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,4 @@ install_requires =
 console_scripts =
     minimum-changes = pre_commit_hooks.minimum_changes:main
     validate-bes = pre_commit_hooks.validate_bes:main
+    verify-files-contain-entry = pre_commit_hooks.verify_files_contain_entry:main
