--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,4 @@ console_scripts =
     minimum-changes = pre_commit_hooks.minimum_changes:main
     validate-bes = pre_commit_hooks.validate_bes:main
     verify-files-contain-entry = pre_commit_hooks.verify_files_contain_entry:main
+    verify-files-contain-pattern = pre_commit_hooks.verify_files_contain_pattern:main
