--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -21,3 +21,10 @@
   language: python
   pass_filenames: True
   types: [text]
+- id: verify-files-contain-pattern
+  name: Verify Files Contain Pattern
+  description: This hook validates that a file has a regex match or group within a reference file
+  entry: verify-files-contain-pattern
+  language: python
+  pass_filenames: True
+  types: [text]
