--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ packages = pre_commit_hooks
 python_requires = >=3.5
 install_requires =
     validate_bes_xml
+    python-Levenshtein
     thefuzz
 
 [options.entry_points]
