--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,4 @@ console_scripts =
     validate-bes = pre_commit_hooks.validate_bes:main
     verify-files-contain-entry = pre_commit_hooks.verify_files_contain_entry:main
     verify-files-contain-pattern = pre_commit_hooks.verify_files_contain_pattern:main
+    verify-files-are-ascii = pre_commit_hooks.verify_files_are_ascii:main
