finalizing git_clean hook, should make it check clean state by default instead of cleaning

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,3 +84,9 @@ repos:
         pass_filenames: True
         args: [--min-changes=2, --auto-revert]
         files: .test_file
+  - repo: local
+    hooks:
+      - id: git-clean
+        name: git-clean
+        entry: python pre_commit_hooks/git_clean.py
+        language: system
