--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,4 @@ console_scripts =
     verify-files-contain-entry = pre_commit_hooks.verify_files_contain_entry:main
     verify-files-contain-pattern = pre_commit_hooks.verify_files_contain_pattern:main
     verify-files-are-ascii = pre_commit_hooks.verify_files_are_ascii:main
+    git-clean = pre_commit_hooks.git_clean:main
