change hook default config

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -40,3 +40,4 @@
   description: This will delete untracked files by running `git clean -f`
   entry: git-clean
   language: python
+  pass_filenames: False
