--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,4 @@ console_scripts =
     verify-files-contain-pattern = pre_commit_hooks.verify_files_contain_pattern:main
     verify-files-are-ascii = pre_commit_hooks.verify_files_are_ascii:main
     git-clean = pre_commit_hooks.git_clean:main
+    regex-search-filter-replace = pre_commit_hooks.regex_search_filter_replace:main
