add new pre-commit hook

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,4 @@ console_scripts =
     verify-files-are-ascii = pre_commit_hooks.verify_files_are_ascii:main
     git-clean = pre_commit_hooks.git_clean:main
     regex-search-filter-replace = pre_commit_hooks.regex_search_filter_replace:main
+    revert-missing-change = pre_commit_hooks.revert_missing_change:main
