--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -94,3 +94,12 @@ repos:
         name: git-clean
         entry: python pre_commit_hooks/git_clean.py
         language: system
+  - repo: local
+    hooks:
+      - id: revert-missing-change
+        name: revert-missing-change
+        entry: python pre_commit_hooks/revert_missing_change.py
+        language: system
+        pass_filenames: True
+        args: ['--change_regex=v[0-9]+(\.[0-9]+)*\s*</Title>', --auto-revert]
+        files: .test_file
