--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -50,3 +50,11 @@
   pass_filenames: True
   types: [text]
   files: \.(xml|html|htm|bes|ojo)$
+- id: revert-missing-change
+  name: Revert Missing Change
+  description: This hook requires a regex match in the git history of a file.
+  entry: revert-missing-change
+  language: python
+  pass_filenames: True
+  require_serial: True
+  types: [text]
