--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@
 # https://github.com/pre-commit/pre-commit-hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.3.0
     hooks:
       - id: check-yaml
       # - id: check-json
@@ -25,12 +25,12 @@ repos:
       #  args: [--markdown-linebreak-ext=md]
       - id: detect-private-key
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.26.3
+    rev: v1.27.1
     hooks:
       - id: yamllint
         args: [-c=.yamllint.yaml]
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.9.3
+    rev: v5.10.1
     hooks:
       - id: isort
   - repo: https://gitlab.com/pycqa/flake8
@@ -38,11 +38,11 @@ repos:
     hooks:
       - id: flake8
   - repo: https://github.com/psf/black
-    rev: 21.10b0
+    rev: 22.6.0
     hooks:
       - id: black
   - repo: https://github.com/jgstew/pre-commit-jgstew
-    rev: v1.0.5
+    rev: v1.1.2
     hooks:
       - id: minimum-changes
         args: [--min-changes=0]
