--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/jgstew/pre-commit-jgstew
-    rev: v1.1.2
+    rev: v1.1.3
     hooks:
       - id: minimum-changes
         args: [--min-changes=0]
@@ -91,13 +91,14 @@ repos:
   - repo: local
     hooks:
       - id: git-clean
-        name: git-clean
+        name: git-clean-local
         entry: python pre_commit_hooks/git_clean.py
         language: system
+        files: .test_file
   - repo: local
     hooks:
       - id: revert-missing-change
-        name: revert-missing-change
+        name: revert-missing-change-local
         entry: python pre_commit_hooks/revert_missing_change.py
         language: system
         pass_filenames: True
