--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -104,4 +104,10 @@ repos:
         pass_filenames: True
         args: ['--change_regex=v[0-9]+(\.[0-9]+)*\s*</Title>']
         files: .test_file
-# pre-commit try-repo . --files test/example.test_file test/example-test.bes
+  - repo: local
+    hooks:
+      - id: try-repo
+        name: try-repo
+        entry: pre-commit try-repo . --files test/example.test_file test/example-test.bes
+        language: system
+        pass_filenames: False
