--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ install_requires =
     validate_bes_xml
     python-Levenshtein
     thefuzz
+    identify
+    importlib-metadata
+    setuptools
 
 [options.entry_points]
 console_scripts =
