--- a/.github/workflows/test_build.yaml
+++ b/.github/workflows/test_build.yaml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py-version: [3.8, 3.10]
+        py-version: ["3.8", "3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
