--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     validate_bes_xml
     importlib-metadata
     setuptools
+    validate-plist-xml
 
 [options.entry_points]
 console_scripts =
@@ -36,3 +37,4 @@ console_scripts =
     git-clean = pre_commit_hooks.git_clean:main
     regex-search-filter-replace = pre_commit_hooks.regex_search_filter_replace:main
     revert-missing-change = pre_commit_hooks.revert_missing_change:main
+    validate-plist = pre_commit_hooks.validate_plist:main
