--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -15,6 +15,14 @@
   pass_filenames: True
   types: [text]
   files: \.(bes|ojo)$
+- id: validate-plist
+  name: Validate Apple plist Files
+  description: This hook validates Apple plist Files
+  entry: validate-plist
+  language: python
+  pass_filenames: True
+  types: [text]
+  files: \.(recipe|plist)$
 - id: verify-files-contain-entry
   name: Verify Files Contain Entry
   description: This hook validates that a file has a regex match or group within a reference file
