--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,4 @@ console_scripts =
     regex-search-filter-replace = pre_commit_hooks.regex_search_filter_replace:main
     revert-missing-change = pre_commit_hooks.revert_missing_change:main
     validate-plist = pre_commit_hooks.validate_plist:main
+    github-action-set-output-fix = pre_commit_hooks.github_action_set_output_fix:main
