--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -106,6 +106,15 @@ repos:
         files: .test_file
   - repo: local
     hooks:
+      - id: github-action-set-output-fix
+        name: github-action-set-output-fix-local
+        entry: python pre_commit_hooks/github_action_set_output_fix.py
+        language: system
+        pass_filenames: True
+        args: ['--overwrite']
+        files: \.(yaml|yml)$
+  - repo: local
+    hooks:
       - id: try-repo
         name: try-repo
         entry: pre-commit try-repo . --files test/example.test_file test/example-test.bes
