--- a/.github/workflows/tag_and_release.yaml
+++ b/.github/workflows/tag_and_release.yaml
@@ -32,7 +32,7 @@ jobs:
         if: ${{ !env.ACT }}
         id: tagged
         shell: bash
-        run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ steps.getversion.outputs.version }}" || echo "tagged=1" >> $GITHUB_OUTPUT
+        run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ steps.getversion.outputs.version }}" && echo "::set-output name=tagged::0" || echo "::set-output name=tagged::1"
 
       # wait for all other tests to succeed
       #   what if no other tests?
