testing logic again

--- a/.github/workflows/tag_and_release.yaml
+++ b/.github/workflows/tag_and_release.yaml
@@ -33,8 +33,7 @@ jobs:
         id: tagged
         shell: bash
         run: |
-          git show-ref --tags --verify --quiet -- "refs/tags/v${{ steps.getversion.outputs.version }}"
-          tag_not_exists=$?
+          git show-ref --tags --verify --quiet -- "refs/tags/v${{ steps.getversion.outputs.version }}" && tag_not_exists=$? || tag_not_exists=$?
           echo "exit code was is $tag_not_exists"
           if [ $tag_not_exists -eq 0 ]
           then
